frontend_tests/negative/unaddressable_named_array/go.mod
module example.com/renvotests/negative/unaddressable_named_array

go 1.25
